<resources translatable="false">
    <string name="voice_app_name">Agora Voice Chat</string>
    <string name="voice_app_agora_chatroom">Agora Voice Chat</string>
    <string name="voice_app_agora_chatroom_copy_right">Powered by agora.io</string>
    <string name="voice_chat_room_list_tips">Welcome to Agora Voice Chat Room!\nFeaturing Agora\'s optimal sound practices and the latest audio technology for a more immersive, easier to use, and more fun voice chat experience.</string>
    <string name="voice_room_list_title_name">Voice Chat Room</string>
    <string name="voice_tab_layout_all">All</string>
    <string name="voice_tab_layout_chat_room">Voice Chat Room</string>
    <string name="voice_tab_layout_audio_room">Spatial Audio Room</string>
    <string name="voice_room_disclaimer">Disclaimer</string>
    <string name="voice_room_sound_selection">Current Optimal Profile</string>
    <string name="voice_room_current_customer_usage">Customers:</string>
    <string name="voice_create_room">Create Room</string>
    <string name="voice_create_room_button">+ Create Room</string>
    <string name="voice_room_title">Room Name</string>
    <string name="voice_random">Random</string>
    <string name="voice_room_name_hint">Enter a room name to attract more audience</string>
    <string name="voice_please_input_4_pwd">Enter 4-digit Password</string>
    <string name="voice_room_pwd">Room Password</string>
    <string name="voice_create_room_tips">This version allows you to broadcast for up to 20 minutes. Please ensure that the content of your broadcast does not violate the Terms of Service you have agreed to, or the laws and regulations of your location, otherwise your broadcast will be interrupted.</string>
    <string name="voice_please_input_room_name">Please enter the room name</string>
    <string name="voice_room_create_go_live">GO LIVE</string>
    <string name="voice_room_create_chat_room">Voice Chat Room</string>
    <string name="voice_room_create_chat_3d_room">Spatial Audio Room</string>
    <string name="voice_room_create_chat_room_desc">A multi-person audio interactive scenario where audience members can freely join the conversation.\nWatch Together / Premades / Gaming Companion</string>
    <string name="voice_room_create_3d_room">Spatial Audio</string>
    <string name="voice_room_create_3d_room_desc">Realistic and natural conversations making it feel like speaking in a real room</string>
    <string name="voice_room_create_ktv_room">KTV</string>
    <string name="voice_room_create_tips">Please enter a 4-digit password</string>
    <string name="voice_room_check_password">Incorrect password, please try again</string>
    <string name="voice_room_create_error">Failed to create room</string>
    <string name="voice_room_empty_data">No rooms yet</string>
    <string name="voice_room_list_title_private">Private</string>
    <string name="voice_room_list_item_enter">Enter</string>
    <string name="voice_room_list_count">%d people</string>
    <string name="voice_room_tab_layout_count">(%1$s)</string>
    <string name="voice_room_online_count">%d online</string>
    <string name="voice_room_click_count">%d watching</string>
    <string name="voice_room_mic_number">Mic %d</string>
    <string name="voice_room_profile_update_name_fail">Failed to update</string>
    <string name="voice_room_profile_update_name_suc">Successfully updated</string>
    <string name="voice_empty_invite_hands">No audience yet</string>
    <string name="voice_empty_raised_hands">No requests to speak yet</string>
    <string name="voice_room_profile">Profile</string>
    <string name="voice_room_close">The room has been dissolved</string>
    <string name="voice_room_kick_member">Kicked out of the room</string>
    <string name="voice_member_count_action_kick">Kick Out</string>
    <string name="voice_room_welcome">Welcome to Agora Voice Chat Room! Pornography, gambling, or violence is strictly prohibited in the room.</string>
    <string name="voice_gift_default_name_1">Sweetheart</string>
    <string name="voice_gift_default_name_2">Flower</string>
    <string name="voice_gift_default_name_3">Crystal Box</string>
    <string name="voice_gift_default_name_4">Super A</string>
    <string name="voice_gift_default_name_5">Star</string>
    <string name="voice_gift_default_name_6">Lollipop</string>
    <string name="voice_gift_default_name_7">Diamond</string>
    <string name="voice_gift_default_name_8">Crown</string>
    <string name="voice_gift_default_name_9">Rocket</string>
    <string name="voice_dialog_gift_total_count">Total Contribution: %1$s</string>
    <string name="voice_chatroom_gift_title">Gift</string>
    <string name="voice_chatroom_gift_dialog_send">Send</string>
    <string name="voice_gift_sent">Gifted </string>
    <string name="voice_chatroom_gift_notice">%1$s gifted %2$s a rocket</string>
    <string name="voice_chatroom_send_gift_fail">Gift sending failed</string>
    <string name="voice_chatroom_create_tip1">This version allows you to broadcast for up to 20 minutes, after which the room will automatically dissolve.</string>
    <string name="voice_chatroom_create_tip2">Each voice chat room session is limited to 20 minutes; the room will dissolve afterward</string>
    <string name="voice_chatroom_profile_change_picture">Change avatar</string>
    <string name="voice_room_agree_success">Successfully agreed to co-host!</string>
    <string name="voice_room_agree_fail">Failed to agree to co-host!</string>
    <string name="voice_room_send_invited_fail">Invitation failed!</string>
    <string name="voice_room_raised_hands_title">Request Co-host</string>
    <string name="voice_room_invite_hands_title">Invite Co-host</string>
    <string name="voice_room_invite_audience_title">Audience</string>
    <string name="voice_room_invite">Invite</string>
    <string name="voice_room_invited">Invited</string>
    <string name="voice_room_accept">Accept</string>
    <string name="voice_room_decline">Decline</string>
    <string name="voice_room_accepted">Accepted</string>
    <string name="voice_chatroom_request_speak">Request to co-host?</string>
    <string name="voice_chatroom_cancel_request_speak">Withdraw Request</string>
    <string name="voice_chatroom_prompt">Prompt</string>
    <string name="voice_room_confirm">Confirm</string>
    <string name="voice_room_cancel">Cancel</string>
    <string name="voice_chatroom_mic_apply_success">Application Succeeded!</string>
    <string name="voice_chatroom_mic_apply_fail">Application Failed!</string>
    <string name="voice_chatroom_mic_cancel_apply_success">Application Withdrawn Successfully!</string>
    <string name="voice_chatroom_mic_cancel_apply_fail">Withdrawal Failed!</string>
    <string name="voice_chatroom_mic_submit_sent">Your request has been submitted, waiting for the host\'s approval</string>
    <string name="voice_chatroom_open_bot_to_sound_effect">Add Bots for Optimal Profile Experience?</string>
    <string name="voice_chatroom_open_bot_first">Host Must Activate Bot First</string>
    <string name="voice_chatroom_end_live">End Live</string>
    <string name="voice_chatroom_end_live_tips">The Room Will Be Closed After You Leave</string>
    <string name="voice_chatroom_time_up_tips">Room Dissolved Due To Time Limitation</string>
    <string name="voice_chatroom_exit">Leave the voice chat room?</string>
    <string name="voice_chatroom_exit_and_create_one">Leave and create a new voice chat room?</string>
    <string name="voice_chatroom_open_bot_prompt">Add a bot?</string>
    <string name="voice_chatroom_exchange_mic">Change mic?</string>
    <string name="voice_chatroom_exchange_mic_success">Mic changed successfully</string>
    <string name="voice_chatroom_exchange_mic_fail">Mic change failed: %1$s</string>
    <string name="voice_chatroom_mic_close_by_host">The current seat has been closed by the host</string>
    <string name="voice_chatroom_mic_muted_by_host">The current seat has been muted by the host</string>
    <string name="voice_chatroom_mic_kicked_off">You Were Kicked Out of the Room</string>
    <string name="voice_chatroom_mic_unblocked">Unlocked</string>
    <string name="voice_chatroom_mic_blocked">Mic locked</string>
    <string name="voice_chatroom_mic_muted">Mic muted</string>
    <string name="voice_chatroom_mic_unmuted">Mic unmuted</string>
    <string name="voice_chatroom_mic_audience_accepted_invitation">%1$s accepted the invitation</string>
    <string name="voice_chatroom_mic_audience_rejected_invitation">%1$s rejected the invitation</string>
    <string name="voice_chatroom_mic_stafe_is_full">Mic is full, please try again later</string>
    <string name="voice_chatroom_mic_request_cancelled">Mic request cancelled</string>
    <string name="voice_chatroom_mic_on_stage">On the mic</string>
    <string name="voice_chatroom_mic_off_stage">Off the mic</string>
    <string name="voice_chatroom_mic_removed_from_stage">You have been removed from co-host.</string>
    <string name="voice_chatroom_mic_kicked_out_of_the_room">You have been removed from the voice chat room by the host</string>
    <string name="voice_chatroom_mic_anchor_invited_you_on_stage">The host invites you to co-host</string>
    <string name="voice_chatroom_mic_exchange_mic_success">Mic exchange successful</string>
    <string name="voice_chatroom_mic_exchange_mic_failed">Mic exchange failed</string>
    <string name="voice_voice_voice_chatroom_first_enter_room_notice_tips">Welcome!</string>
    <string name="voice_chatroom_notice_edit_hint">Post an announcement to the chat room, up to 140 characters</string>
    <string name="voice_chatroom_edit">Edit</string>
    <string name="voice_chatroom_notice_edit_limit">Up to 140 characters</string>
    <string name="voice_chatroom_notice_post">Publish</string>
    <string name="voice_chatroom_notice_posted">Published successfully</string>
    <string name="voice_chatroom_notice_changed">Room announcement updated!</string>
    <string name="voice_chatroom_notice_posted_error">Publishing failed</string>
    <string name="voice_chatroom_join_room_success">Joined the voice chat room</string>
    <string name="voice_chatroom_join_room_failed">Failed to join the voice chat room</string>
    <string name="voice_chatroom_host_invitation_sent">Invitation sent</string>
    <string name="voice_room_disclaimer_content_1">The &quot;Voice Chat Demo&quot; (“this product”) is a test product provided by Agora to showcase what can be achieved with the Agora SDK integration. It is offered to existing or potential customers for testing purposes only, not as an official product for end-users. Agora owns the copyright and all rights to this product, and any modification, merger, adjustment, reverse engineering, re-licensing, and/or sale of copies of this software or any other act that infringes upon Agora\'s legal rights is prohibited.</string>
    <string name="voice_chatroom_settings_earback_title">IER (In-Ear Return)</string>
    <string name="voice_chatroom_settings_earback_on">Enable IER</string>
    <string name="voice_chatroom_settings_earback_tip">Enable IER to hear your own voice in real-time, ideal for singing</string>
    <string name="voice_chatroom_settings_earback_volume">IER Volume</string>
    <string name="voice_chatroom_settings_earback_ping">IER Delay</string>
    <string name="voice_chatroom_settings_earback_ping_tips">Please speak into the mic to test the real-time IER delay</string>
</resources>